<resources>
    <string name="app_name">Asistente Compras</string>
    <string name="facebook_app_id">1742974732640211</string>
    <string name="title_activity_maps">Map</string>
    <string name="nombre">Nombre</string>
    <string name="descripcion">Descripción</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="btFoto">Tomar Foto</string>
    <string name="menu_option_delete">Eliminar</string>
    <string name="menu_option_compartir">Compartir</string>
    <string name="escuchar">Escuchar</string>
    <string name="hable">Hable</string>
    <string name="oferta">Oferta</string>
    <string name="usuario">Usuario Header</string>
    <string name="tit_share">Titulo</string>
    <string name="Asistente">Asistente de Compras</string>
</resources>
